--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -56,16 +56,21 @@ http {
         root /usr/share/nginx/html;
         index index.html;
 
-        # Cache static assets
-        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
-            expires 1y;
-            add_header Cache-Control "public, immutable";
-            access_log off;
-        }
-
         # API proxy
         location /api/ {
             proxy_pass http://backend:8080/api/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_connect_timeout 30s;
+            proxy_send_timeout 30s;
+            proxy_read_timeout 30s;
+        }
+
+        # Uploads proxy (for images and files)
+        location /uploads/ {
+            proxy_pass http://backend:8080/uploads/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -94,4 +99,4 @@ http {
             root /usr/share/nginx/html;
         }
     }
-} 
+}
