--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -99,7 +99,7 @@ spring:
     activate:
       on-profile: dev
   datasource:
-    url: jdbc:mysql://localhost:3306/sales_app?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+    url: jdbc:mysql://localhost:3306/sales_app?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&createDatabaseIfNotExist=true
   jpa:
     show-sql: false
     hibernate:
