--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,22 @@
+version: '3.8'
+
 services:
   mysql:
     image: mysql:8.0
-    container_name: sales-mysql
     restart: unless-stopped
     environment:
-      MYSQL_ROOT_PASSWORD: rootpassword
+      MYSQL_ROOT_PASSWORD: rootpassword      # Railway sẽ yêu cầu cung cấp biến này qua UI hoặc CLI
       MYSQL_DATABASE: sales_app
       MYSQL_USER: sales_user
       MYSQL_PASSWORD: sales_password
     ports:
-      - "${MYSQL_PORT:-3307}:3306"
+      - "3306:3306"  # Railway có thể bỏ qua port này, nhưng giữ để local vẫn chạy
     volumes:
       - mysql_data:/var/lib/mysql
       - ./mysql/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
-    networks:
-      - sales-network
     healthcheck:
       test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      interval: 30s
       timeout: 20s
       retries: 10
 
@@ -24,26 +24,22 @@ services:
     build:
       context: ./backend
       dockerfile: Dockerfile
-    container_name: sales-backend
     restart: unless-stopped
     ports:
-      - "${BACKEND_PORT:-8080}:8080"
+      - "8080:8080"
     environment:
       SPRING_PROFILES_ACTIVE: prod
-      SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/sales_app?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+      SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/sales_app
       SPRING_DATASOURCE_USERNAME: sales_user
       SPRING_DATASOURCE_PASSWORD: sales_password
-      JWT_SECRET: your-super-secret-jwt-key-for-production-change-this
+      JWT_SECRET: ${JWT_SECRET}
+      APP_NAME: ${APP_NAME}
+      APP_VERSION: ${APP_VERSION}
+      APP_ENVIRONMENT: ${APP_ENVIRONMENT}
+      CORS_ALLOWED_ORIGINS: ${CORS_ALLOWED_ORIGINS}
     depends_on:
       mysql:
         condition: service_healthy
-    networks:
-      - sales-network
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8080/actuator/health"]
-      interval: 30s
-      timeout: 10s
-      retries: 5
     volumes:
       - ./backend/uploads:/app/uploads
 
@@ -51,24 +47,12 @@ services:
     build:
       context: ./frontend
       dockerfile: Dockerfile
-    container_name: sales-frontend
     restart: unless-stopped
     ports:
-      - "4200:80"
+      - "80:80"
     depends_on:
       backend:
         condition: service_healthy
-    networks:
-      - sales-network
-    healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:80/health"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
 
 volumes:
   mysql_data:
-
-networks:
-  sales-network:
-    driver: bridge
