--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,12 +1,12 @@
 spring:
   profiles:
-    active: dev
+    active: ${SPRING_PROFILES_ACTIVE:dev}  # Sẽ được lấy từ .env khi deploy
   application:
     name: sales-backend
   datasource:
-    url: jdbc:mysql://localhost:3306/sales_app?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&createDatabaseIfNotExist=true
-    username: root
-    password:
+    url: ${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/sales_app?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&createDatabaseIfNotExist=true}
+    username: ${SPRING_DATASOURCE_USERNAME:root}
+    password: ${SPRING_DATASOURCE_PASSWORD:}
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
@@ -20,7 +20,6 @@ spring:
     user:
       name: root
       password:
-  # Redis configuration - made optional
   data:
     redis:
       host: localhost
@@ -32,7 +31,6 @@ spring:
           max-active: 8
           max-idle: 8
           min-idle: 0
-  # Cache configuration - fallback to simple cache if Redis is not available
   cache:
     type: simple
     cache-names: products,users,orders,customers
@@ -94,14 +92,17 @@ app:
     auto-reorder: false
 
 ---
+
 spring:
   config:
     activate:
       on-profile: dev
   datasource:
     url: jdbc:mysql://localhost:3306/sales_app?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&createDatabaseIfNotExist=true
+    username: root
+    password:
   jpa:
-    show-sql: false
+    show-sql: true
     hibernate:
       ddl-auto: validate
   cache:
@@ -115,14 +116,15 @@ logging:
     org.springframework.cache: DEBUG
 
 ---
+
 spring:
   config:
     activate:
       on-profile: prod
   datasource:
-    url: ${SPRING_DATASOURCE_URL:jdbc:mysql://mysql:3306/sales_app?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC}
-    username: ${SPRING_DATASOURCE_USERNAME:root}
-    password: ${SPRING_DATASOURCE_PASSWORD:}
+    url: ${SPRING_DATASOURCE_URL}
+    username: ${SPRING_DATASOURCE_USERNAME}
+    password: ${SPRING_DATASOURCE_PASSWORD}
   jpa:
     show-sql: false
     hibernate:
@@ -139,9 +141,10 @@ logging:
     file: "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
 
 jwt:
-  secret: ${JWT_SECRET:your-super-secret-jwt-key-for-production-change-this}
+  secret: ${JWT_SECRET}
 
 ---
+
 spring:
   config:
     activate:
@@ -149,14 +152,14 @@ spring:
   datasource:
     url: jdbc:h2:mem:testdb
     username: sa
-    password: 
+    password:
     driver-class-name: org.h2.Driver
   h2:
     console:
       enabled: true
       path: /h2-console
   jpa:
-    show-sql: false
+    show-sql: true
     hibernate:
       ddl-auto: create-drop
     properties:
